--- a/foundations/02-class-id-selectors/index.html
+++ b/foundations/02-class-id-selectors/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p class="p1">Number 1 - I'm a class!</p>
+    <p class="p">Number 1 - I'm a class!</p>
     <div id="div1">Number 2 - I'm one ID.</div>
-    <p class="p2">Number 3 - I'm a class, but cooler!</p>
+    <p class="p p2">Number 3 - I'm a class, but cooler!</p>
     <div id="div2">Number 4 - I'm another ID.</div>
-    <p class="p3">Number 5 - I'm a class!</p>
+    <p class="p">Number 5 - I'm a class!</p>
   </body>
 </html>
